block edit popup

--- a/src/static/css/popup.less
+++ b/src/static/css/popup.less
@@ -101,4 +101,15 @@
             }
         }
     }
+
+    .popup-list-scroll {
+        max-height: 300px;
+        display: flex;
+        flex-wrap: wrap;
+        align-content: flex-start;
+        row-gap: 12px;
+        column-gap: 16px;
+        list-style-type: none;
+        overflow: scroll;
+    }
 }
