--- a/src/static/css/popup.less
+++ b/src/static/css/popup.less
@@ -100,6 +100,14 @@
                 color: #2D4379;
             }
         }
+
+        p {
+            text-align: left;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 14px;
+            color: rgba(45, 67, 121, 0.6);
+        }
     }
 
     .popup-list-scroll {
