--- a/src/static/css/layout.less
+++ b/src/static/css/layout.less
@@ -160,7 +160,8 @@
     margin: 0 auto;
     width: 1440px;
     display: grid;
-    grid-template-columns: calc(464px - 80px) auto min-content;
+    // grid-template-columns: calc(464px - 80px) auto min-content;
+    grid-template-columns: max-content auto min-content;
     row-gap: 48px;
     align-items: center;
     box-sizing: border-box;
@@ -171,6 +172,7 @@
     flex-direction: row;
     gap: 120px;
     align-self: center;
+    margin: 0 auto;
 
     &>a {
         font-weight: 400;
@@ -182,6 +184,12 @@
         &:hover {
             text-decoration-line: underline;
             color: #386BEE;
+        }
+    }
+
+    .collections-navigation-container:hover {
+        .collections-navigation-dropdown {
+            display: none;
         }
     }
 }
@@ -225,6 +233,7 @@
     display: flex;
     flex-direction: row;
     grid-column-end: span 2;
+    margin: 0 calc((874px - 670px)/2);
 
     a {
         text-decoration-line: underline;
@@ -239,7 +248,7 @@
 }
 
 .footer-credentials {
-    margin-left: 134px;
+    margin-left: 145px;
 }
 
 .footer-copyright {
