--- a/src/static/css/layout.less
+++ b/src/static/css/layout.less
@@ -164,6 +164,7 @@
     grid-template-columns: max-content auto min-content;
     row-gap: 48px;
     align-items: center;
+    justify-content: space-between;
     box-sizing: border-box;
 }
 
@@ -172,7 +173,6 @@
     flex-direction: row;
     gap: 120px;
     align-self: center;
-    margin: 0 auto;
 
     &>a {
         font-weight: 400;
@@ -233,7 +233,6 @@
     display: flex;
     flex-direction: row;
     grid-column-end: span 2;
-    margin: 0 calc((874px - 670px)/2);
 
     a {
         text-decoration-line: underline;
