category popups fixes

--- a/src/static/css/popup.less
+++ b/src/static/css/popup.less
@@ -135,6 +135,11 @@
             line-height: 14px;
             color: rgba(45, 67, 121, 0.6);
         }
+
+        .popup-link-icon {
+            display: flex;
+            justify-content: center;
+        }
     }
 
     .popup-list-scroll {
