--- a/src/static/css/user.css
+++ b/src/static/css/user.css
@@ -328,7 +328,7 @@
 
 .user-admin-panel-table-row-head#categories,
 .user-admin-panel-table-row#categories {
-    grid-template-columns: 5% auto 7% 13% 5%;
+    grid-template-columns: 5% auto 7% 13% 13% 5%;
 }
 
 .user-admin-panel-table-row-head#locations-platforms,
@@ -392,10 +392,29 @@
     width: fit-content;
 }
 
+.user-admin-panel-table-row>#service-name>a:hover>i,
+.user-admin-panel-table-row>#user-name>a:hover>i {
+    display: block;
+    animation: external-link-icon 0.2s ease-in-out 1;
+}
+
 .user-admin-panel-table-row>#service-name i,
 .user-admin-panel-table-row>#user-name i {
+    display: none;
     font-size: 12px;
     color: #386BEE;
+}
+
+@keyframes external-link-icon {
+    from {
+        opacity: 0;
+        transform: translateX(-10px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
 
 .user-admin-panel-table-edit-button {
