--- a/src/static/css/user.css
+++ b/src/static/css/user.css
@@ -356,6 +356,10 @@
     grid-template-columns: 5% 25% auto 13% 5%;
 }
 
+.user-admin-panel-table-row#collections .category-tag-button {
+    box-shadow: 0 1px 2px #e0e7f4;
+}
+
 .user-admin-panel-table-row#collections .category-tag-button:hover .category-tag-qty>span {
     font-size: 0;
 }
