--- a/src/static/css/global.css
+++ b/src/static/css/global.css
@@ -90,23 +90,23 @@ hr {
 }
 
 .bg-white {
-    background: white !important;
+    background: var(--color-white) !important;
 }
 
 .bg-blue {
-    background: #386BEE !important;
+    background: var(--color-blue) !important;
 }
 
 .color-white {
-    color: white !important;
+    color: var(--color-white) !important;
 }
 
 .color-blue {
-    color: #386BEE !important;
+    color: var(--color-blue) !important;
 }
 
 .color-green {
-    color: #1FB663 !important;
+    color: var(--color-green) !important;
 }
 
 .cursor-pointer {
@@ -143,7 +143,7 @@ hr {
     font-weight: 600;
     font-size: 32px;
     line-height: 32px;
-    color: #16181B;
+    color: var(--color-black);
 }
 
 .categories-section {
@@ -154,7 +154,7 @@ hr {
     font-weight: 400;
     font-size: 14px;
     line-height: 14px;
-    color: #2D4379;
+    color: var(--color-darkblue);
     margin-top: 24px;
     margin-bottom: 32px;
 }
@@ -174,7 +174,7 @@ hr {
 
 .categories-list#blocks {
     padding: 12px;
-    background: #F6F7FB;
+    background: var(--color-lightblue-two);
     border-radius: 12px;
 }
 
@@ -184,7 +184,7 @@ hr {
     font-weight: 400;
     font-size: 14px;
     line-height: 14px;
-    color: #636E8D;
+    color: var(--color-gray);
 }
 
 .sort-selection>span {
@@ -217,7 +217,7 @@ hr {
     border-radius: 32px;
     box-sizing: border-box;
     height: 48px;
-    color: #636E8D;
+    color: var(--color-gray);
 }
 
 .wide-search-container i {
@@ -249,7 +249,7 @@ hr {
 }
 
 .cards-mobile-swipe-point.active {
-    background: #386BEE;
+    background: var(--color-blue);
     cursor: auto;
 }
 
@@ -303,7 +303,7 @@ hr {
 .navbar-mobile-user-button {
     width: 42px;
     height: 42px;
-    background: white;
+    background: var(--color-white);
     border-radius: 50%;
     cursor: pointer;
 }
@@ -315,7 +315,7 @@ hr {
 .navbar-mobile-close-button {
     font-size: 18px;
     line-height: 18px;
-    color: #B3B7C1;
+    color: var(--color-lightgray-one);
     cursor: pointer;
 }
 
@@ -333,20 +333,20 @@ hr {
     font-size: 14px;
     line-height: 18px;
     text-decoration: none;
-    color: #B3B7C1;
+    color: var(--color-lightgray-one);
 }
 
 .navbar-mobile-navigation>a:hover {
     text-decoration-line: underline;
-    color: #386BEE;
+    color: var(--color-blue);
 }
 
 .navbar-mobile-navigation>.collections-navigation-container>.collections-navigation-button {
-    color: #B3B7C1;
+    color: var(--color-lightgray-one);
 }
 
 .navbar-mobile-navigation>.collections-navigation-container>.collections-navigation-button:hover {
-    color: #386BEE;
+    color: var(--color-blue);
 }
 
 .navbar-mobile-navigation>.collections-navigation-container:hover .collections-navigation-dropdown {
@@ -364,9 +364,9 @@ hr {
     border: none;
     border-radius: 50%;
     font-size: 18px;
-    color: black;
+    color: var(--color-black);
     mix-blend-mode: screen;
-    background-color: #FFFFFF;
+    background-color: var(--color-white);
     cursor: pointer;
 }
 
@@ -381,10 +381,10 @@ hr {
 }
 
 .loader {
-    border: 5px solid #F4F7FF;
+    border: 5px solid var(--color-lightblue-one);
     -webkit-animation: spin 1s linear infinite;
     animation: spin 1s linear infinite;
-    border-top: 5px solid #386BEE;
+    border-top: 5px solid var(--color-blue);
     border-radius: 50%;
     width: 50px;
     height: 50px;
