--- a/src/static/css/feedback.css
+++ b/src/static/css/feedback.css
@@ -186,21 +186,22 @@
     align-items: center;
     gap: 8px;
     border: none;
-    background: none;
+    padding: 6px 8px;
+    background: var(--color-lightgray-two);
     border-radius: 16px;
     cursor: pointer;
 }
 
 .feedback-service-likes>i {
-    color: #D3DAEA;
-    font-size: 20px;
+    color: var(--color-white);
+    font-size: 14px;
 }
 
 .feedback-service-likes>div {
-    width: 32px;
-    height: 24px;
-    border: 1px solid #1FB663;
-    border-radius: 12px;
+    /* width: 32px; */
+    /* height: 24px; */
+    /* border: 1px solid #1FB663; */
+    /* border-radius: 12px; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -208,31 +209,18 @@
 }
 
 .feedback-service-likes.active {
-    padding: 6px 8px;
-    background: #1FB663;
-}
-
-.feedback-service-likes.active>i {
-    color: #FFFFFF;
-    font-size: 14px;
-}
-
-.feedback-service-likes.active>div {
-    width: 24px;
-    height: 16px;
-    border: none;
-    background: #FFFFFF;
+    background: var(--color-green);
 }
 
 .feedback-service-likes span {
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 600;
-    font-size: 12px;
-    line-height: 12px;
+    font-size: 14px;
+    line-height: 14px;
     text-align: center;
     text-transform: uppercase;
-    color: #1FB663;
+    color: var(--color-white);
 }
 
 .feedback-card-delete-container {
