--- a/src/static/css/layout.less
+++ b/src/static/css/layout.less
@@ -174,7 +174,7 @@
     gap: 100px;
     align-self: center;
 
-    &>a {
+    a {
         font-weight: 400;
         font-size: 14px;
         line-height: 14px;
