--- a/src/static/css/feedback.css
+++ b/src/static/css/feedback.css
@@ -251,11 +251,11 @@
     display: grid;
 }
 
-.feedback-popup-columns {
+/* .feedback-popup-columns {
     display: grid;
     grid-template-columns: min-content auto;
     gap: 24px;
-}
+} */
 
 .feedback-popup-columns i {
     font-size: 18px;
@@ -263,8 +263,8 @@
 
 .feedback-popup-columns h3 {
     font-weight: 700;
-    font-size: 32px;
-    line-height: 32px;
+    font-size: 24px;
+    line-height: 24px;
     color: #16181B;
     margin-bottom: 12px;
 }
@@ -279,6 +279,7 @@
     border-bottom: 1px solid #E9EEFA;
     color: #2D4379;
     box-sizing: border-box;
+    margin-bottom: 1px;
 }
 
 .feedback-popup-search button {
@@ -375,6 +376,50 @@
     resize: none;
     box-sizing: border-box;
     margin-bottom: 32px;
+}
+
+.feedback-popup-bottom-buttons {
+    display: grid;
+    grid-template-columns: 80px 1px auto;
+    border-radius: 48px;
+    box-shadow: 0px 8px 16px rgba(56, 107, 238, 0.25);
+    position: relative;
+    overflow: hidden;
+}
+
+.feedback-popup-bottom-buttons-ai-button {
+    width: 80px;
+    height: 48px;
+    font-size: 16px;
+    color: var(--color-white);
+    background: var(--color-blue);
+    cursor: pointer;
+    position: relative;
+    z-index: 1;
+}
+
+.feedback-popup-bottom-buttons-divider {
+    background: linear-gradient(var(--color-blue) -10%, #97B6FB, var(--color-blue) 110%);
+    position: relative;
+    z-index: 1;
+}
+
+.feedback-popup-bottom-buttons-create-feedback-button {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    color: var(--color-white);
+    background: var(--color-blue);
+    cursor: pointer;
 }
 
 /* FEEDBACK CARD POPUP */
