--- a/src/static/css/layout.less
+++ b/src/static/css/layout.less
@@ -96,6 +96,22 @@
         color: inherit;
         text-decoration: none;
     }
+
+    &>.header-user-logout-button {
+        width: 42px;
+        height: 42px;
+        font-size: 14px;
+        color: var(--color-blue);
+        background: var(--color-white);
+        border: 1px solid var(--color-blue);
+        border-radius: 50%;
+        cursor: pointer;
+
+        &:hover {
+            color: var(--color-white);
+            background: var(--color-blue);
+        }
+    }
 }
 
 /* BREADCRUMBS */
