--- a/src/static/css/specialists.css
+++ b/src/static/css/specialists.css
@@ -6,7 +6,7 @@
     box-shadow: 0 0 8px #e0e7f4;
     padding: 20px 30px;
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: max-content auto max-content;
     align-items: center;
     gap: 32px;
 }
@@ -18,6 +18,7 @@
 .specialist-card-photo>img {
     width: 64px;
     height: 64px;
+    border-radius: 50%;
 }
 
 .specialist-card-info {
