--- a/src/static/css/global.css
+++ b/src/static/css/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Noto+Sans:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Noto+Sans:wght@300;400;500;600&family=Prompt:wght@700&display=swap');
 
 :root {
     --color-white: #FFF;
@@ -255,6 +255,30 @@ hr {
     cursor: auto;
 }
 
+/* CONFIRM POPUP */
+
+.confirm-popup-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    background: var(--color-white);
+    padding: 32px;
+    text-align: center;
+    border-radius: 24px;
+    box-shadow: 0 0 4px var(--color-lightgray-two);
+}
+
+.confirm-popup-container>h3 {
+    padding: 0 32px;
+    margin-bottom: 24px;
+}
+
+.confirm-popup-container>.blue-shadow-button {
+    margin: 0 auto;
+}
+
 /* NAVBAR MOBILE */
 
 .navbar-mobile {
@@ -294,6 +318,26 @@ hr {
 
 .navbar-mobile-header>img {
     width: 148px;
+}
+
+.navbar-mobile-header-logo {
+    color: var(--color-white);
+    font-family: 'Prompt';
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+    letter-spacing: 0.72px;
+    user-select: none;
+}
+
+.navbar-mobile-header-logo>a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.navbar-mobile-header-logo>a>span {
+    color: rgba(255, 255, 255, 0.40);
 }
 
 .navbar-mobile-header-buttons {
