--- a/src/static/css/ui.css
+++ b/src/static/css/ui.css
@@ -173,7 +173,7 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 14px;
-    color: #FF2038;
+    color: #FF2038 !important;
     cursor: pointer;
 }
 
