feedbacks, admin panel fixes

--- a/src/static/css/global.css
+++ b/src/static/css/global.css
@@ -268,6 +268,7 @@ hr {
     text-align: center;
     border-radius: 24px;
     box-shadow: 0 0 4px var(--color-lightgray-two);
+    z-index: 100;
 }
 
 .confirm-popup-container>h3 {
@@ -277,6 +278,10 @@ hr {
 
 .confirm-popup-container>.blue-shadow-button {
     margin: 0 auto;
+}
+
+.confirm-popup-container>.delete-button {
+    margin-top: 18px;
 }
 
 /* NAVBAR MOBILE */
