--- a/src/static/css/articles.css
+++ b/src/static/css/articles.css
@@ -18,6 +18,11 @@
     margin-bottom: 16px;
 }
 
+.article-card-image>a {
+    color: var(--color-blue);
+    text-decoration: none;
+}
+
 .article-card-image img {
     width: 100%;
     height: 220px;
@@ -64,8 +69,9 @@
 
 .article-page-container {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto min-content;
     gap: 48px;
+    max-width: 1280px;
 }
 
 .article-page-content {
@@ -73,18 +79,22 @@
     gap: 20px;
 }
 
-.article-page-content>p {
+/* .article-page-content>p {
     font-family: 'Noto Sans';
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
     color: #2D4379;
-}
+} */
 
-.article-page-content>img {
+/* .article-page-content>img {
     width: 800px;
     border-radius: 20px;
+} */
+
+.article-page-content-main-container {
+    white-space: break-spaces;
 }
 
 .article-page-category {
@@ -131,6 +141,91 @@
     height: 24px;
     font-size: 16px;
     cursor: pointer;
+}
+
+.article-page-admin-button {
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 14px;
+    background: var(--color-lightblue-three);
+    border-radius: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    width: 100%;
+    height: 48px;
+    margin-bottom: 16px;
+    cursor: pointer;
+}
+
+.article-page-admin-button#edit-article {
+    color: var(--color-blue);
+}
+
+.article-page-admin-button#delete-article {
+    color: var(--color-red);
+}
+
+/* MISC */
+
+.articles-add-article-button {
+    margin: 0 auto 0 24px;
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: var(--color-blue);
+    background: var(--color-lightblue-one);
+    padding: 10px 20px;
+    border-radius: 24px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    cursor: pointer;
+}
+
+/* ARTICLE EDIT POPUP */
+
+.article-edit-popup-info {
+    width: 100%;
+    display: grid;
+    gap: 16px;
+    font-size: 14px;
+    line-height: 14px;
+    font-weight: 400;
+    text-align: left;
+    color: rgba(45, 67, 121, 0.6);
+}
+
+.article-edit-popup-info>input {
+    border: 1px solid rgba(45, 67, 121, calc(0.6 * 0.4));
+    border-radius: 32px;
+    font-family: 'Noto Sans', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 16px;
+    color: var(--color-darkblue);
+    padding: 0 20px;
+    height: 48px;
+    box-sizing: border-box;
+}
+
+.article-edit-popup-info>textarea {
+    border: 1px solid rgba(45, 67, 121, calc(0.6 * 0.4));
+    border-radius: 24px;
+    font-family: 'Noto Sans', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 18px;
+    color: var(--color-darkblue);
+    padding: 12px 20px;
+    box-sizing: border-box;
+    height: 200px;
+    resize: none;
 }
 
 /* MOBILE */
