--- a/src/static/css/services.css
+++ b/src/static/css/services.css
@@ -391,8 +391,8 @@
 }
 
 .service-description-text {
-    display: grid;
-    gap: 16px;
+    /* display: grid; */
+    /* gap: 16px; */
     margin: 32px 0;
 }
 
@@ -401,21 +401,42 @@
     font-size: 14px;
     line-height: 20px;
     color: #2D4379;
+    margin-bottom: 16px;
+}
+
+.service-description-text>button {
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: var(--color-blue);
+    cursor: pointer;
 }
 
 .service-details {
     margin-top: 32px;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    /* grid-template-columns: repeat(2, 1fr); */
     gap: 10px;
     margin-bottom: 24px;
 }
 
-.service-details>span {
+.service-details-row {
+    display: grid;
+    grid-template-columns: max-content auto max-content;
+    gap: 4px;
+}
+
+.service-details-row>span {
     font-weight: 300;
     font-size: 14px;
     line-height: 14px;
     color: #2D4379;
+}
+
+.service-details-dashed-line {
+    border-bottom: 1px dashed #E9EEFA;
+    /* border-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='%23E9EEFAFF' stroke-width='5' stroke-dasharray='1%2c 10' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e") 1 repeat; */
 }
 
 .service-details .service-details-data {
@@ -661,6 +682,12 @@
     line-height: 14px;
     color: var(--color-darkblue);
     margin-bottom: 32px;
+}
+
+/* SERVICE PAGE BOTTOM */
+
+.page-main-container>.home-section-common-container {
+    padding: 0;
 }
 
 /* SERVICE PAGE MOCKUP */
@@ -1264,6 +1291,34 @@
     gap: 8px;
 }
 
+.service-edit-logo-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.service-edit-logo-container>img {
+    width: 100px;
+    height: 100px;
+    object-fit: contain;
+    padding: 4px;
+    background: var(--color-lightblue-two);
+    border-radius: 6px;
+}
+
+.service-edit-logo-container>i {
+    width: 100px;
+    height: 100px;
+    line-height: 100px;
+    text-align: center;
+    font-size: 24px;
+    padding: 4px;
+    color: var(--color-darkblue);
+    background: var(--color-lightblue-two);
+    border-radius: 6px;
+}
+
 .service-edit-secondary-button.add-screenshot span {
     font-weight: inherit;
     font-size: inherit;
@@ -1310,38 +1365,39 @@
     display: block;
 }
 
-.service-edit-add-screenshot-mode {
+.service-edit-add-image-mode {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 16px;
 }
 
-.service-edit-add-screenshot-mode input {
+.service-edit-add-image-mode input {
     margin-right: 12px;
 }
 
-.service-edit-add-screenshot-container {
+.service-edit-add-image-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 16px;
 }
 
-.service-edit-add-screenshot-input-container {
+.service-edit-add-image-input-container {
     border: 1px solid #B3B7C1;
     border-radius: 12px;
     width: 100%;
     text-align: left;
 }
 
-.service-edit-add-screenshot-input-container input[type='file'] {
+.service-edit-add-image-input-container input[type='file'] {
     width: 100%;
     padding: 8px 12px;
     box-sizing: border-box;
 }
 
-.service-edit-add-screenshot-input-container input[type='text'] {
+.service-edit-add-image-input-container input[type='text'],
+.service-edit-add-image-input-container input[type='url'] {
     width: 100%;
     height: 38px;
     padding: 0 12px;
