--- a/src/static/css/articles.css
+++ b/src/static/css/articles.css
@@ -8,7 +8,7 @@
 .article-card-container {
     width: 300px;
     height: auto;
-    line-height: 0;
+    /* line-height: 0; */
     flex-shrink: 0;
 }
 
@@ -16,6 +16,7 @@
     position: relative;
     display: flex;
     margin-bottom: 16px;
+    height: 220px;
 }
 
 .article-card-image>a {
@@ -63,6 +64,10 @@
     line-height: 20px;
     color: #2D4379;
     margin-bottom: 16px;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 /* ARTICLE PAGE */
@@ -94,7 +99,77 @@
 } */
 
 .article-page-content-main-container {
-    white-space: break-spaces;
+    /* white-space: break-spaces; */
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.article-page-content-main-container * {
+    margin: 16px 0;
+}
+
+.article-page-content-main-container table {
+    border: 0;
+    border-collapse: collapse;
+    border-radius: 12px 12px 0 0;
+    overflow: hidden;
+}
+
+.article-page-content-main-container table * {
+    margin: 0;
+}
+
+.article-page-content-main-container table td {
+    padding: 24px;
+}
+
+.article-page-content-main-container table tbody>tr:first-child {
+    background: var(--color-blue);
+    color: var(--color-white);
+}
+
+.article-page-content-main-container table tbody>tr:first-child>td {
+    border: 0;
+    border-right: 1px solid var(--color-white);
+}
+
+.article-page-content-main-container table tbody>tr:first-child>td:last-child {
+    border: 0;
+}
+
+.article-page-content-main-container table tbody>tr:not(:first-child)>td {
+    border: 1px solid #eee;
+}
+
+.article-page-content-main-container h2 {
+    font-size: 24px;
+    line-height: normal;
+    margin: 24px 0;
+}
+
+.article-page-content-main-container h3 {
+    font-size: 18px;
+    line-height: normal;
+    margin: 18px 0;
+}
+
+.article-page-content-main-container h4 {
+    font-size: 16px;
+    line-height: normal;
+}
+
+.article-page-content-main-container img {
+    max-width: 100%;
+    height: auto;
+    padding: 24px;
+    background: var(--color-lightblue-three);
+    border-radius: 24px;
+    box-sizing: border-box;
+}
+
+.article-page-content-main-container a {
+    color: var(--color-blue);
+    text-decoration: none;
 }
 
 .article-page-category {
