debounce, schema, other fixes

--- a/src/static/css/services.css
+++ b/src/static/css/services.css
@@ -687,7 +687,7 @@
 
 /* SERVICE PAGE BOTTOM */
 
-.page-main-container>.home-section-common-container {
+.page-main-container .home-section-common-container {
     padding: 0;
 }
 
