--- a/src/static/css/global.css
+++ b/src/static/css/global.css
@@ -129,6 +129,7 @@ hr {
 
 .page-main-container {
     width: 1440px;
+    min-height: 800px;
     margin: 0 auto;
     padding: 0 80px;
     box-sizing: border-box;
