slice description, some fixes

--- a/src/static/css/addservice.less
+++ b/src/static/css/addservice.less
@@ -109,6 +109,14 @@
             }
         }
     }
+
+    a {
+        color: var(--color-blue);
+
+        &:hover {
+            text-decoration: none;
+        }
+    }
 }
 
 // MOBILE
