--- a/src/static/css/feedback.css
+++ b/src/static/css/feedback.css
@@ -316,6 +316,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 10px 0;
     cursor: pointer;
 }
 
@@ -331,7 +332,7 @@
 }
 
 .feedback-popup-services-list-item div {
-    margin: 0 auto 0 16px;
+    margin: 0 auto 0 0;
 }
 
 .feedback-popup-services-list-item p {
