--- a/src/static/css/addservice.less
+++ b/src/static/css/addservice.less
@@ -95,6 +95,7 @@
                 height: 26px;
                 background: #FFFFFF;
                 border-radius: 50%;
+                transition-duration: 0.4s;
             }
         }
     }
@@ -105,7 +106,8 @@
             box-shadow: 0px 2px 4px rgba(31, 182, 99, 0.25);
 
             div {
-                float: right;
+                // float: right;
+                margin-left: 32px;
             }
         }
     }
@@ -187,6 +189,14 @@
                 div {
                     width: 20px;
                     height: 20px;
+                }
+            }
+        }
+
+        input[type="checkbox"]:checked+label {
+            .add-service-checkbox-button {
+                div {
+                    margin-left: 24px;
                 }
             }
         }
